# backend/internal/models/share.go
@@ -1,0 +1,13 @@
+package models
+
+type MessageResponse struct {
+	Message string `json:"message"`
+}
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
+type SuccessResponse struct {
+	Success bool `json:"success"`
+}
